bin_PROGRAMS      = arianrhod
arianrhod_SOURCES = arianrhod.c
EXTRA_DIST        = MT.h arianrhod.c arianrhod.h bonus.c bonus.h chara.c \
                    chara.h class.c class.h controls.c controls.h manager.c \
                    manager.h parse.c parse.h skill.c skill.h stats.c stats.h \
                    types.h

